Fix tooltip overflow on user leaderboard

--- a/portlets/src/main/webapp/skin/less/usersLeaderboard.less
+++ b/portlets/src/main/webapp/skin/less/usersLeaderboard.less
@@ -38,3 +38,7 @@
   min-width:14px;
   border-radius: 50%;
 }
+.userLeaderboardMenu {
+  contain: none !important;
+  overflow: initial !important;
+}
